--- a/index.html
+++ b/index.html
@@ -7,11 +7,35 @@
     <!--internal CSS-->
     <style>
         header {
-            background-color: blue;
+            background-color: antiquewhite;
+            display: flex;
+            justify-content: space-between;
+        }
+
+        header>h1 {
+            border: 1px solid black;
+            /*margin-top: 0px;
+            margin-bottom: 0px;
+            border-top-width: 20px;
+            border-left-width: 20px;
+            border-right-width: 20px;
+            border-bottom-width: 20px;
+            padding-bottom: 10px;
+            padding-left: 10px;
+            padding-right: 10px;
+            padding-top: 10px;*/
         }
 
         .main-header {
             background-color: green;
+            
+        }
+
+        footer {
+            background-color: lightseagreen;
+            border: 1px solid black;
+            display: flex;
+            justify-content: space-around;
         }
 
     </style>
@@ -20,7 +44,10 @@
 </head>
 <body>
     <header>
-        <h1>header</h1>
+        <h1>kiri</h1>
+        <h1>kanan</h1>
+    </header>
+
     </header>
     <main>
         <header class="main-header" >
@@ -33,7 +60,7 @@
         <p>belajara layouting HTML dan CSS dengan struktur yang benar</p>
     </main>
     <!--inline CSS-->
-    <footer style="background-color: lightseagreen;">
+    <footer>
         <span>footer</span>
     </footer>
 </body>
